@@ -600,6 +600,7 @@
 #gptofoo pcl-2 printer/Olivetti-JP350S
 #gptofoo pcl-2 printer/Olivetti-PG_306
 #gptofoo olympus-p10 printer/Olympus-P-10
+#gptofoo olympus-p200 printer/Olympus-P-200
 #gptofoo olympus-p300 printer/Olympus-P-300E
 #gptofoo olympus-p300 printer/Olympus-P-300U
 #gptofoo olympus-p300 printer/Olympus-P-330E
