@@ -4,7 +4,7 @@
    XML description of printers known to libgimpprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.101 2004/07/09 22:32:15 m0m Exp $"
+   "$Id: printers.xml,v 1.102 2004/07/22 13:45:48 m0m Exp $"
 -->
 
 <gimp-print xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -1307,6 +1307,9 @@
     <family name="olympus">
       <printer name="Olympus P10" driver="olympus-p10" manufacturer="Olympus">
         <model value="2"/>
+      </printer>
+      <printer name="Olympus P200" driver="olympus-p200" manufacturer="Olympus">
+        <model value="4"/>
       </printer>
       <printer name="Olympus P300" driver="olympus-p300" manufacturer="Olympus">
         <model value="0"/>
